--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tailwind-template",
-  "version": "1.5.1",
-  "description": "Jake Harvanchik's TailwindCSS Starter Template Project",
+  "name": "portfolio-v2",
+  "version": "1.0.0",
+  "description": "Jake Harvanchik's TPortfolio Website",
   "author": "Jake Harvanchik",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "autoprefixer": "10.4.2",
     "cross-env": "^7.0.3",
-    "cssnano": "^5.0.16",
+    "cssnano": "^5.0.17",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-htmlmin": "^5.0.1",
@@ -26,9 +26,9 @@
     "gulp-rev": "^9.0.0",
     "gulp-rev-rewrite": "^5.0.0",
     "gulp-svgmin": "^4.1.0",
-    "npm-check-updates": "^12.2.1",
+    "npm-check-updates": "^12.3.1",
     "prettier": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.5",
-    "tailwindcss": "^3.0.18"
+    "prettier-plugin-tailwindcss": "^0.1.7",
+    "tailwindcss": "^3.0.23"
   }
 }
