--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
-    "autoprefixer": "10.4.2",
+    "autoprefixer": "^10.4.2",
     "cross-env": "^7.0.3",
     "cssnano": "^5.0.17",
     "del": "^6.0.0",
@@ -27,6 +27,7 @@
     "gulp-rev-rewrite": "^5.0.0",
     "gulp-svgmin": "^4.1.0",
     "npm-check-updates": "^12.3.1",
+    "postcss": "^8.4.6",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.7",
     "tailwindcss": "^3.0.23"
