finished resume rough draft

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
     "cSpell.words": [
+        "Bukkit",
         "Clarita",
         "CSUF",
+        "Gridster",
+        "NIRSA",
         "Parens",
+        "Purpur",
         "Stillwater"
     ]
 }
