--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,6 @@
   "singleQuote": true,
   "bracketSameLine": true,
   "arrowParens": "avoid",
-  "htmlWhitespaceSensitivity": "ignore",
+  "htmlWhitespaceSensitivity": "strict",
   "printWidth": 110
 }
