new index page WIP

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
+        "ˈhär",
         "Bukkit",
+        "chik",
         "Clarita",
         "Cpath",
         "CSUF",
