updated dependencies and fixed gulp del

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,11 @@
         "Cpath",
         "CSUF",
         "Csvg",
+        "exif",
         "Gaegu",
         "Gridster",
+        "jfif",
+        "jsmin",
         "NIRSA",
         "Parens",
         "Purpur",
