moved projects above other work experience
also adjusted spacing on technical skills when in print mode to avoid going to a new line for just one extra skill

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,9 +10,11 @@
         "exif",
         "Gaegu",
         "Gridster",
+        "Intelli",
         "jfif",
         "jsmin",
         "NIRSA",
+        "Nuxt",
         "Parens",
         "Purpur",
         "résumé",
